[gd_scene load_steps=9 format=3 uid="uid://bbf5jr2js4svr"]

[ext_resource type="Theme" uid="uid://4xcdimhfc2hy" path="res://default_theme_tools.tres" id="1"]
[ext_resource type="Script" uid="uid://b3imq7aht4x3k" path="res://tools/editor/EditorOpenChartPopup.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://bi00tlp38rnc3" path="res://tools/editor/WorkshopUploadForm.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://bogchj2lurtn7" path="res://tools/editor/CreateDifficultyDialog.tscn" id="4"]
[ext_resource type="PackedScene" uid="uid://bcbf31mumsfhs" path="res://tools/editor/CreateSongDialog.tscn" id="4_034tf"]
[ext_resource type="PackedScene" path="res://tools/editor/SongVerificationPopup.tscn" id="5"]
[ext_resource type="PackedScene" uid="uid://lhyypajs7taw" path="res://tools/editor/SongMetaDataEditor.tscn" id="6"]
[ext_resource type="Script" uid="uid://buyyl1h56yijv" path="res://tools/editor/controls/HBEditorLineEdit.gd" id="7"]

[node name="Control" type="ConfirmationDialog"]
title = ""
position = Vector2i(0, 32)
size = Vector2i(275, 289)
visible = true
theme = ExtResource("1")
script = ExtResource("2")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -48.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SearchLineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Search..."
script = ExtResource("7")

[node name="Tree" type="Tree" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
hide_root = true

[node name="VBoxContainerSong" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="NewSongButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainerSong"]
layout_mode = 2
text = "New song"

[node name="VerifySongButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainerSong"]
layout_mode = 2
text = "Verify Song"

[node name="EditDataButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainerSong"]
layout_mode = 2
text = "Edit song data"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainerSong"]
layout_mode = 2

[node name="AddDifficultyButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainerSong"]
layout_mode = 2
text = "Add chart"

[node name="DeleteChartButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainerSong"]
layout_mode = 2
text = "Remove chart"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainerSong"]
layout_mode = 2

[node name="UploadToWorkshopButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainerSong"]
layout_mode = 2
text = "Upload to workshop"

[node name="CreateSongDialog" parent="." instance=ExtResource("4_034tf")]
size = Vector2i(550, 330)

[node name="AcceptDialog" type="AcceptDialog" parent="."]
size = Vector2i(100, 429)
dialog_text = "You must add an audio track to your song before editing, you can do this from \\\"Edit song data\\\"."
dialog_autowrap = true

[node name="SongMetaEditorDialog" type="ConfirmationDialog" parent="."]

[node name="SongMetaEditor" parent="SongMetaEditorDialog" instance=ExtResource("6")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -41.0

[node name="CreateDifficultyDialog" parent="." instance=ExtResource("4")]
size = Vector2i(280, 314)
visible = false

[node name="DeleteConfirmationDialog" type="ConfirmationDialog" parent="."]
size = Vector2i(345, 132)
dialog_text = "Are you sure you want to delete this chart?"

[node name="SongVerificationPopup" parent="." instance=ExtResource("5")]
visible = false

[node name="WorkshopUploadDialog" parent="." instance=ExtResource("3")]
visible = false

[connection signal="confirmed" from="SongMetaEditorDialog" to="." method="_on_SongMetaEditorDialog_confirmed"]
